affichage des attaques et bottes